# wmstickynotes

./: ChangeLog  Makefile.am  README  THANKS  configure.ac  resize_button.xpm  wmstickynotes.c  wmstickynotes.h  wmstickynotes.xpm  wmstickynotes_0.4.orig.tar.gz.delta  wmstickynotes_0.4.orig.tar.gz.id  wmstickynotes_0.5.orig.tar.gz.delta  wmstickynotes_0.5.orig.tar.gz.id  wmstickynotes_0.6.orig.tar.gz.delta  wmstickynotes_0.6.orig.tar.gz.id  wmstickynotes_0.7.orig.tar.gz.delta  wmstickynotes_0.7.orig.tar.gz.id
debian/: README.Debian  README.source  changelog  control  copyright  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  manpages  menu  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch  watch.ex  wmstickynotes.1  wmstickynotes.cron.d.ex  wmstickynotes.default.ex  wmstickynotes.doc-base.EX
debian/patches/: fix_-Wunused-result.patch  fix_icon_size.patch  series
